# ikuta-iac

./: .gitignore  README.md  cdk.json  pyproject.toml
ikuta_iac/: app.py
ikuta_iac/stack/: aws_apigateway.py  aws_ecr.py  aws_lambda.py  ecr.py  lambda.py
tests/: test_ikuta_iac.py
