[tool.poetry]
name = "ikuta-iac"
version = "0.1.0"
description = ""
authors = ["adtak <adtak>"]

[tool.poetry.dependencies]
python = "^3.8"
"aws-cdk.core" = "^1.113.0"
"aws-cdk.aws-ecr" = "^1.113.0"
"aws-cdk.aws-lambda" = "^1.113.0"
"aws-cdk.aws-iam" = "^1.116.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
